修改文章内容

--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -199,7 +199,7 @@ profile:
   gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
   author: 史校忠
   author_title: 测试开发工程师
-  author_description: 不断学习中,联系方式18857793811,微信同号
+  author_description: 不断学习中,欢迎互相交流。Wechat：18857793811
   location: Hangzhou, China
   follow: https://github.com/lababazxc
   # Social Links
