--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -31,15 +31,14 @@ site:
     width: 40
     height: 40
     url: ../images/logo.png
-  title: Hexo # 页面title
+  title: No cross, no crown # 页面title
   favicon: /favicon.png
-  board: <p>欢迎交流与分享经验!</p>
-	 <p>联系方式18857793811</p> # 站点公告
+  board: <p>欢迎交流与分享经验!</p> # 站点公告
   copyright: false # 底部版权信息
 
 # config
 config:
-  skin: # 主题颜色 theme-black theme-blue theme-green theme-purple
+  skin: theme-black # 主题颜色 theme-black theme-blue theme-green theme-purple
   layout: main-center # 布局方式 main-left main-center main-right
   toc: true # 是否开启文章章节目录导航
   menu_highlight: false # 是否开启当前菜单高亮显示
