--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -31,7 +31,7 @@ site:
     width: 40
     height: 40
     url: ../images/logo.png
-  title: No cross, no crown # 页面title
+  title: Think twice, Code once # 页面title
   favicon: /favicon.png
   board: <p>欢迎交流与分享经验!</p> # 站点公告
   copyright: false # 底部版权信息
